Fixed background image in RouteBuilder covering Header and Footer

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -7,6 +7,8 @@
   margin-bottom: 60px;
   margin: 0;
   background-color: #3b4d3e;
+  z-index: 10;
+  position: relative;
 }
 
 .header__logo-container {
